--- a/VideoRental/VideoRental/VideoRental.csproj
+++ b/VideoRental/VideoRental/VideoRental.csproj
@@ -202,6 +202,14 @@
     <Compile Include="Migrations\201906252107413_PopulateCustomers.Designer.cs">
       <DependentUpon>201906252107413_PopulateCustomers.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201906260233304_MembershipTypeName.cs" />
+    <Compile Include="Migrations\201906260233304_MembershipTypeName.Designer.cs">
+      <DependentUpon>201906260233304_MembershipTypeName.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201906260250514_CustomerBirthDate.cs" />
+    <Compile Include="Migrations\201906260250514_CustomerBirthDate.Designer.cs">
+      <DependentUpon>201906260250514_CustomerBirthDate.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -268,6 +276,7 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Customers\Index.cshtml" />
+    <Content Include="Views\Customers\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -306,6 +315,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201906252107413_PopulateCustomers.resx">
       <DependentUpon>201906252107413_PopulateCustomers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201906260233304_MembershipTypeName.resx">
+      <DependentUpon>201906260233304_MembershipTypeName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201906260250514_CustomerBirthDate.resx">
+      <DependentUpon>201906260250514_CustomerBirthDate.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
