--- a/VideoRental/VideoRental/VideoRental.csproj
+++ b/VideoRental/VideoRental/VideoRental.csproj
@@ -171,6 +171,7 @@
     <Compile Include="Controllers\CustomersController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\MoviesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -210,14 +211,37 @@
     <Compile Include="Migrations\201906260250514_CustomerBirthDate.Designer.cs">
       <DependentUpon>201906260250514_CustomerBirthDate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201906261210476_Movies.cs" />
+    <Compile Include="Migrations\201906261210476_Movies.Designer.cs">
+      <DependentUpon>201906261210476_Movies.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201906261211414_PopulateGenre.cs" />
+    <Compile Include="Migrations\201906261211414_PopulateGenre.Designer.cs">
+      <DependentUpon>201906261211414_PopulateGenre.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201906261229357_DomainUpdate.cs" />
+    <Compile Include="Migrations\201906261229357_DomainUpdate.Designer.cs">
+      <DependentUpon>201906261229357_DomainUpdate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201906261240453_Refresh.cs" />
+    <Compile Include="Migrations\201906261240453_Refresh.Designer.cs">
+      <DependentUpon>201906261240453_Refresh.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201906261926415_UpdateModel.cs" />
+    <Compile Include="Migrations\201906261926415_UpdateModel.Designer.cs">
+      <DependentUpon>201906261926415_UpdateModel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MembershipType.cs" />
+    <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\CustomerFormViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -277,6 +301,9 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Customers\Index.cshtml" />
     <Content Include="Views\Customers\Details.cshtml" />
+    <Content Include="Views\Movies\Index.cshtml" />
+    <Content Include="Views\Movies\Details.cshtml" />
+    <Content Include="Views\Customers\CustomerForm.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -321,6 +348,21 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201906260250514_CustomerBirthDate.resx">
       <DependentUpon>201906260250514_CustomerBirthDate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201906261210476_Movies.resx">
+      <DependentUpon>201906261210476_Movies.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201906261211414_PopulateGenre.resx">
+      <DependentUpon>201906261211414_PopulateGenre.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201906261229357_DomainUpdate.resx">
+      <DependentUpon>201906261229357_DomainUpdate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201906261240453_Refresh.resx">
+      <DependentUpon>201906261240453_Refresh.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201906261926415_UpdateModel.resx">
+      <DependentUpon>201906261926415_UpdateModel.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
