--- a/VideoRental/VideoRental/VideoRental.csproj
+++ b/VideoRental/VideoRental/VideoRental.csproj
@@ -231,6 +231,14 @@
     <Compile Include="Migrations\201906261926415_UpdateModel.Designer.cs">
       <DependentUpon>201906261926415_UpdateModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201906261957257_MovieReleaseDateNonMandatory.cs" />
+    <Compile Include="Migrations\201906261957257_MovieReleaseDateNonMandatory.Designer.cs">
+      <DependentUpon>201906261957257_MovieReleaseDateNonMandatory.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201906262027110_Refresh4.cs" />
+    <Compile Include="Migrations\201906262027110_Refresh4.Designer.cs">
+      <DependentUpon>201906262027110_Refresh4.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -242,6 +250,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\CustomerFormViewModel.cs" />
+    <Compile Include="ViewModels\MovieFormViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -300,10 +309,9 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Customers\Index.cshtml" />
-    <Content Include="Views\Customers\Details.cshtml" />
     <Content Include="Views\Movies\Index.cshtml" />
-    <Content Include="Views\Movies\Details.cshtml" />
     <Content Include="Views\Customers\CustomerForm.cshtml" />
+    <Content Include="Views\Movies\MovieForm.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -363,6 +371,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201906261926415_UpdateModel.resx">
       <DependentUpon>201906261926415_UpdateModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201906261957257_MovieReleaseDateNonMandatory.resx">
+      <DependentUpon>201906261957257_MovieReleaseDateNonMandatory.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201906262027110_Refresh4.resx">
+      <DependentUpon>201906262027110_Refresh4.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
