--- a/VideoRental/VideoRental/VideoRental.csproj
+++ b/VideoRental/VideoRental/VideoRental.csproj
@@ -190,6 +190,7 @@
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\MoviesController.cs" />
     <Compile Include="CustomAttributes\DateOfBirthValidationAttribute.cs" />
+    <Compile Include="Dtos\CustomerDto.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
