--- a/VideoRental/VideoRental/VideoRental.csproj
+++ b/VideoRental/VideoRental/VideoRental.csproj
@@ -268,9 +268,14 @@
     <Compile Include="Migrations\201906271427111_MovieReleaseDateRequired.Designer.cs">
       <DependentUpon>201906271427111_MovieReleaseDateRequired.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201907140337363_SeedUsers.cs" />
+    <Compile Include="Migrations\201907140337363_SeedUsers.Designer.cs">
+      <DependentUpon>201907140337363_SeedUsers.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\CustomRoles.cs" />
     <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -619,7 +624,7 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Customers\Index.cshtml" />
-    <Content Include="Views\Movies\Index.cshtml" />
+    <Content Include="Views\Movies\List.cshtml" />
     <Content Include="Views\Customers\CustomerForm.cshtml" />
     <Content Include="Views\Movies\MovieForm.cshtml" />
     <Content Include="Scripts\umd\popper.min.js.map" />
@@ -631,6 +636,7 @@
     <Content Include="Scripts\popper.js.map" />
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
+    <Content Include="Views\Movies\ReadOnlyList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -689,6 +695,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201906271427111_MovieReleaseDateRequired.resx">
       <DependentUpon>201906271427111_MovieReleaseDateRequired.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201907140337363_SeedUsers.resx">
+      <DependentUpon>201907140337363_SeedUsers.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
