--- a/VideoRental/VideoRental/VideoRental.csproj
+++ b/VideoRental/VideoRental/VideoRental.csproj
@@ -272,6 +272,10 @@
     <Compile Include="Migrations\201907140337363_SeedUsers.Designer.cs">
       <DependentUpon>201907140337363_SeedUsers.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201907140407186_AddDrivingLicenseToApplicationUser.cs" />
+    <Compile Include="Migrations\201907140407186_AddDrivingLicenseToApplicationUser.Designer.cs">
+      <DependentUpon>201907140407186_AddDrivingLicenseToApplicationUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -698,6 +702,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201907140337363_SeedUsers.resx">
       <DependentUpon>201907140337363_SeedUsers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201907140407186_AddDrivingLicenseToApplicationUser.resx">
+      <DependentUpon>201907140407186_AddDrivingLicenseToApplicationUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
